--- a/mywebsite/src/main/webapp/index-style.css
+++ b/mywebsite/src/main/webapp/index-style.css
@@ -113,3 +113,16 @@
 	font-size: 70px;
 	margin-top: 80px;
 }
+
+button{
+	width: 200px;
+	padding: 15px 0;
+	text-align: center;
+	margin: 20px 10px;
+	font-weight: bold;
+	border: 2px solid #fb2525;
+	border-radius:20px;
+	background: transparent;
+	color: #fff;
+	cursor: pointer;
+}
