--- a/mywebsite/src/main/webapp/createEvent-style.css
+++ b/mywebsite/src/main/webapp/createEvent-style.css
@@ -46,7 +46,8 @@ body {
 
 form .input-detail .input-box {
 	margin-bottom: 15px;
-	width: calc(100% / 2-20px);
+	width: 50%;
+	padding-right: 100px;
 }
 
 .input-detail .input-box .details {
@@ -63,4 +64,22 @@ form .input-detail .input-box {
 	border: 1px solid #ccc;
 	padding-left: 15px;
 	font-size: 16px;
+}
+
+.buttonbox .button {
+	border: none;
+	outline: none;
+	height: 45px;
+	width: 70%;
+	background: linear-gradient(135deg, #d30019, #ba0081);
+	color: #fff;
+	font-size: 18px;
+	border-radius: 20px;
+	margin-left: 15%;
+}
+
+.buttonbox .button:hover {
+	cursor: pointer;
+	background: ffc107;
+	color: #000;
 }
