--- a/mywebsite/src/main/webapp/resources/css/registration-style.css
+++ b/mywebsite/src/main/webapp/resources/css/registration-style.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0;
 	padding: 0;
-	background-image: url(login-background.jpg);
+	background-image: url(../images/login-background.jpg);
 	background-size: cover;
 	font-family: sans-serif;
 }
