--- a/mywebsite/src/main/webapp/resources/css/signUpForEvent-style.css
+++ b/mywebsite/src/main/webapp/resources/css/signUpForEvent-style.css
@@ -1,3 +1,8 @@
+* {
+	background-color: #353633;
+	color: white;
+}
+
 .ui-dataview-list .ui-dataview-row {
 	border-bottom: 1px solid #A8A8A8;
 	padding: 25px 10px;
@@ -13,6 +18,20 @@
 	padding-left: 25px;
 }
 
-.commitButton {
-	background: white url(../images/gruenes-haekchen.png) no-repeat top;
+.button {
+	background-image: url(../images/gruenes-haekchen.png);
+	background-size: cover;
+	background-position: center;
+	width: 35px;
+	height: 30px;
+	background-color: #353633;
+	border-bottom: 0px;
+	border-right: 0px;
+	border-top: 0px;
+	border-left: 0px;
+	
+}
+
+.button:hover {
+	cursor: pointer;
 }
