--- a/mywebsite/src/main/webapp/resources/css/signUpForEvent-style.css
+++ b/mywebsite/src/main/webapp/resources/css/signUpForEvent-style.css
@@ -1,6 +1,56 @@
 * {
-	background-color: #353633;
 	color: white;
+}
+
+.banner {
+	width: 100%;
+	height: 100vh;
+	background-color: #353633;
+}
+
+.navbar {
+	width: 100%;
+	margin: auto;
+	padding: 10px 0;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	background-color: rgba(0, 0, 0, 0.6)
+}
+
+.logo {
+	padding: 0 0 0 65px;
+	width: 200px;
+	height: auto;
+	cursor: pointer;
+}
+
+.navbar ul li {
+	list-style: none;
+	display: inline-block;
+	margin: 0 15px;
+	position: relative;
+}
+
+.navbar ul li a {
+	text-decoration: none;
+	color: #fff;
+	text-transform: uppercase;
+}
+
+.navbar ul li::after {
+	content: '';
+	height: 3px;
+	width: 0%;
+	background: #fb2525;
+	position: absolute;
+	left: 0;
+	bottom: -10px;
+	transition: 0.35s;
+}
+
+.navbar ul li:hover::after {
+	width: 100%;
 }
 
 .ui-dataview-list .ui-dataview-row {
@@ -9,8 +59,45 @@
 	border-bottom-color: var(- -input-border-color, #A8A8A8);
 }
 
-.dataview-header {
+body .ui-dataview .ui-dataview-header {
 	background: #353633;
+	border: 1px solid #fb2525;
+    border-top-width: 1px;
+    border-right-width: 1px;
+    border-bottom-width: 1px;
+    border-left-width: 1px;
+	border-width: 1px 0 1px 0;
+}
+
+body .ui-panel .ui-panel-titlebar {
+	background: #353633;
+	border: 1px solid #fb2525;
+}
+
+body .ui-panel .ui-panel-content {
+	background: #353633;
+	border: 1px solid #fb2525;
+	min-height: 100px;
+	display: grid;
+}
+
+body .ui-dataview.ui-dataview-list .ui-dataview-row {
+	border: solid #fb2525;
+	border-top-width: medium;
+    border-right-width: medium;
+    border-bottom-width: medium;
+    border-left-width: medium;
+	border-width: 0 0 1px 0;
+}
+
+.twenty-percent {
+	width: 20%
+}
+
+.sixty-percent {
+	width: 60%;
+	text-align: center;
+	
 }
 
 .logo {
