--- a/mywebsite/src/main/webapp/resources/css/welcome-style.css
+++ b/mywebsite/src/main/webapp/resources/css/welcome-style.css
@@ -1,38 +1,68 @@
 * {
-	background-color: #353633;
 	margin: 0;
 	padding: 0;
 	font-family: sans-serif;
 }
 
-.headbar {
+.container {
+	width: 100%;
+	height: 100vh;
+	background-color: #353633;
+}
+
+.navbar {
 	width: 100%;
 	margin: auto;
 	padding: 10px 0;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	color: #fff;
+	background-color: rgba(0, 0, 0, 0.6)
 }
 
-.container {
-	padding: 3em;
-	display: grid;
-	grid-gap: 2em;
-	grid-template-columns: rpeat(auto-fill, minmax(250px, 1fr));
+.logo {
+	padding: 0 0 0 65px;
+	width: 200px;
+	height: auto;
+	cursor: pointer;
 }
 
-.headbar ul li {
+.navbar ul li {
 	list-style: none;
 	display: inline-block;
 	margin: 0 15px;
 	position: relative;
 }
 
-.headbar ul li a {
+.navbar ul li a {
 	text-decoration: none;
 	color: #fff;
 	text-transform: uppercase;
+}
+
+.navbar ul li::after {
+	content: '';
+	height: 3px;
+	width: 0%;
+	background: #fb2525;
+	position: absolute;
+	left: 0;
+	bottom: -10px;
+	transition: 0.35s;
+}
+
+.navbar ul li:hover::after {
+	width: 100%;
+}
+
+.username {
+	color: #fff;
+	text-transform: uppercase;
+	text-decoration: nonoe;
+}
+
+.username:hover {
+	cursor: pointer;
 }
 
 .mainbox {
