--- a/mywebsite/src/main/webapp/resources/css/welcome-style.css
+++ b/mywebsite/src/main/webapp/resources/css/welcome-style.css
@@ -66,8 +66,39 @@
 }
 
 .mainbox {
-	background: rgba(f, f, f, 0.75);
-	width: 80%;
-	height: auto;
-	margin-left: 100px;
+	display: flex;
+	justify-content: center;
+	position: relative;
+	top: 12%;
+}
+
+.events {
+	max-width: 1100px;
+	width: 100%;
+	background: rgba(0, 0, 0, 0.8);
+	padding: 25px 30px;
+	border-radius: 5px;
+	color: #fff;
+}
+
+.twenty-percent {
+	width: 20%
+}
+
+.sixty-percent {
+	width: 60%;
+	text-align: center;
+	
+}
+
+.five-percent {
+	width: 5%;
+}
+
+.eightyfive-percent {
+	width: 85%;
+}
+
+.ten-percent {
+	width: 10%
 }
