--- a/mywebsite/src/main/webapp/resources/css/welcome-style.css
+++ b/mywebsite/src/main/webapp/resources/css/welcome-style.css
@@ -4,6 +4,10 @@
 	font-family: sans-serif;
 }
 
+body {
+	color: #fff;
+}
+
 .container {
 	width: 100%;
 	height: 100vh;
@@ -70,12 +74,13 @@
 	justify-content: center;
 	position: relative;
 	top: 12%;
+	background-color: #353633;
 }
 
 .events {
 	max-width: 1100px;
 	width: 100%;
-	background: rgba(0, 0, 0, 0.8);
+	background: rgba(0, 0, 0, 0.7);
 	padding: 25px 30px;
 	border-radius: 5px;
 	color: #fff;
@@ -101,4 +106,64 @@
 
 .ten-percent {
 	width: 10%
+}
+
+.ui-dataview-list .ui-dataview-row {
+	border-bottom: 1px solid #A8A8A8;
+	padding: 25px 10px;
+	border-bottom-color: var(- -input-border-color, #A8A8A8);
+	background: none;
+}
+
+body .ui-dataview .ui-dataview-header {
+	background: none;
+	border: 1px solid #fb2525;
+    border-top-width: 1px;
+    border-right-width: 1px;
+    border-bottom-width: 1px;
+    border-left-width: 1px;
+	border-width: 1px 0 1px 0;
+}
+
+body .ui-dataview .ui-dataview-content {
+	background: none;
+	color: #fff;
+}
+
+body .ui-panel .ui-panel-titlebar {
+	background: none;
+	border: 1px solid #fb2525;
+}
+
+body .ui-panel .ui-panel-content {
+	border: 1px solid #fb2525;
+	min-height: 100px;
+	display: grid;
+	background: none;
+}
+
+body .ui-dataview.ui-dataview-list .ui-dataview-row {
+	background: none;
+	background-image: none;
+	border: solid #fb2525;
+	border-top-width: medium;
+    border-right-width: medium;
+    border-bottom-width: medium;
+    border-left-width: medium;
+	border-width: 0 0 1px 0;
+	opacity: 100%;
+	color: white;
+}
+
+.ui-g {
+	background-color: none;
+}
+
+.ui-panelgrid {
+    background: transparent;
+}
+
+.ui-dataview .ui-dataview-header {
+    border-bottom: 0 none;
+    display: none;
 }
