--- a/mywebsite/src/main/webapp/resources/css/ownEvents-style.css
+++ b/mywebsite/src/main/webapp/resources/css/ownEvents-style.css
@@ -7,6 +7,9 @@
 
 body {
 	color: #fff;
+	background-image: url("../images/stars-background.jpg");
+	background-repeat: no-repeat;
+	background-attachment: scroll;
 }
 
 .container {
