--- a/mywebsite/src/main/webapp/resources/css/signUpForEvent-style.css
+++ b/mywebsite/src/main/webapp/resources/css/signUpForEvent-style.css
@@ -5,6 +5,12 @@
 	color: white;
 }
 
+body {
+	background-image: url("../images/stars-background.jpg");
+	background-repeat: no-repeat;
+	background-attachment: scroll;
+}
+
 .banner {
 	width: 100%;
 	height: 100vh;
