--- a/mywebsite/src/main/webapp/resources/css/welcome-style.css
+++ b/mywebsite/src/main/webapp/resources/css/welcome-style.css
@@ -6,12 +6,14 @@
 
 body {
 	color: #fff;
+	background-image: url("../images/stars-background.jpg");
+	background-repeat: no-repeat;
+	background-attachment: scroll;
 }
 
 .container {
 	width: 100%;
 	height: 100vh;
-	background-color: #353633;
 }
 
 .navbar {
@@ -129,7 +131,6 @@ body .ui-menu {
 	justify-content: center;
 	position: relative;
 	top: 12%;
-	background-color: #353633;
 }
 
 .events {
