--- a/mywebsite/src/main/webapp/resources/css/index-style.css
+++ b/mywebsite/src/main/webapp/resources/css/index-style.css
@@ -125,4 +125,26 @@ button{
 	background: transparent;
 	color: #fff;
 	cursor: pointer;
+	position: relative;
+	overflow: hidden;
+}
+
+span {
+	background: #fb2525;
+	height: 100%;
+	width: 0;
+	border-radius: 10px;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	z-index: -1;
+	transition: 0.35s;
+}
+
+button:hover span {
+	width: 100%;
+}
+
+button:hover {
+	border: none;
 }
