--- a/mywebsite/src/main/webapp/resources/css/signUpForEvent-style.css
+++ b/mywebsite/src/main/webapp/resources/css/signUpForEvent-style.css
@@ -6,15 +6,13 @@
 }
 
 body {
-	background-image: url("../images/stars-background.jpg");
-	background-repeat: no-repeat;
-	background-attachment: scroll;
+	background-color: #353633;
+	background-size: cover;
 }
 
 .banner {
 	width: 100%;
 	height: 100vh;
-	background-color: #353633;
 }
 
 .navbar {
