--- a/mywebsite/src/main/webapp/resources/css/signUpForEvent-style.css
+++ b/mywebsite/src/main/webapp/resources/css/signUpForEvent-style.css
@@ -2,7 +2,6 @@
 	margin: 0;
 	padding: 0;
 	font-family: sans-serif;
-	color: white;
 }
 
 body {
@@ -175,6 +174,7 @@ body .ui-dataview.ui-dataview-list .ui-dataview-row {
 .sixty-percent {
 	width: 60%;
 	text-align: center;
+	color: white;
 	
 }
 
@@ -184,6 +184,7 @@ body .ui-dataview.ui-dataview-list .ui-dataview-row {
 
 .eightyfive-percent {
 	width: 85%;
+	color: #fff !important;
 }
 
 .ten-percent {
@@ -217,4 +218,16 @@ body .ui-dataview.ui-dataview-list .ui-dataview-row {
 	width: 35px;
 	height: 30px;
 	background-color: #353633;
+}
+
+body .ui-dialog-titlebar-icon .ui-dialog-titlebar-close .ui-corner-all {
+	color: #000 !important;
+}
+
+body .ui-dialog .ui-dialog-titlebar .ui-dialog-title {
+	color: #000 !important;
+}
+
+.ui-panel-title {
+	color: #fff;
 }
